[package]
name = "s21client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
lazy_static = "1.4.0"
regex = "1.9.6"
reqwest = {version = "0.11.22", features = ["json"]}
uuid = {version = "1.4.1", features = ["v4"]}
tokio = { version = "1", features = ["full"] }
